--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icon": "^1.0.0",
+    "react-icons": "^5.2.1",
     "sass": "^1.77.8"
   },
   "devDependencies": {
