--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mongoose": "^8.5.1",
     "next": "14.2.5",
     "react": "^18",
+    "react-calendar": "^5.0.0",
     "react-dom": "^18",
     "react-icon": "^1.0.0",
     "react-icons": "^5.2.1",
