--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "countdown": "^2.6.0",
     "express": "^4.19.2",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.1",
     "next": "14.2.5",
     "react": "^18",
     "react-calendar": "^5.0.0",
+    "react-countdown": "^2.3.5",
     "react-dom": "^18",
     "react-icon": "^1.0.0",
     "react-icons": "^5.2.1",
