--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18",
     "react-calendar": "^5.0.0",
     "react-countdown": "^2.3.5",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18",
     "react-icon": "^1.0.0",
     "react-icons": "^5.2.1",
