--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.5",
     "@mui/material": "^5.16.5",
+    "axios": "^1.7.2",
+    "boring-avatars": "^1.10.2",
     "countdown": "^2.6.0",
     "express": "^4.19.2",
     "mongodb": "^6.8.0",
