--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "@mui/icons-material": "^5.16.5",
     "@mui/material": "^5.16.5",
     "axios": "^1.7.2",
     "boring-avatars": "^1.10.2",
     "countdown": "^2.6.0",
     "express": "^4.19.2",
+    "leaflet": "^1.9.4",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.1",
     "next": "14.2.5",
@@ -27,6 +29,7 @@
     "react-dom": "^18",
     "react-icon": "^1.0.0",
     "react-icons": "^5.2.1",
+    "react-leaflet": "^4.2.1",
     "sass": "^1.77.8"
   },
   "devDependencies": {
